--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon ./server.js",
-    "test": "NODE_ENV=test jest --runInBand --forceExit",
+    "test": "NODE_ENV=test jest --runInBand --forceExit --coverage",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
-    "db:delete": "docker-compose down -v"
+    "db:delete": "docker-compose down -v",
+    "db:migrate": "node migrate.js"
   },
   "dependencies": {
     "@nearform/sql": "^1.5.0",
